; ModuleID = '/home/carl/AnghaBench/TDengine/src/modules/http/src/extr_httpHandle.c_httpReadChunkedBody.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/modules/http/src/extr_httpHandle.c_httpReadChunkedBody.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i32 }

@HTTP_CHECK_BODY_SUCCESS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [67 x i8] c"context:%p, fd:%d, ip:%s, chunked body not finished, continue read\00", align 1
@.str.1 = private unnamed_addr constant [53 x i8] c"context:%p, fd:%d, ip:%s, read chunked request error\00", align 1
@HTTP_CHECK_BODY_ERROR = common dso_local global i32 0, align 4
@HTTP_CHECK_BODY_CONTINUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @httpReadChunkedBody(%struct.TYPE_7__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @httpParseChunkedBody(%struct.TYPE_7__* %7, i32* %8, i32 1)
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %2
  %13 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @httpParseChunkedBody(%struct.TYPE_7__* %13, i32* %14, i32 0)
  %16 = load i32, i32* @HTTP_CHECK_BODY_SUCCESS, align 4
  store i32 %16, i32* %3, align 4
  br label %41

17:                                               ; preds = %2
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %23 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @httpTrace(i8* getelementptr inbounds ([67 x i8], [67 x i8]* @.str, i64 0, i64 0), %struct.TYPE_7__* %18, i32 %21, i32 %24)
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %27 = call i32 @httpReadDataImp(%struct.TYPE_7__* %26)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %39, label %29

29:                                               ; preds = %17
  %30 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %31 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %32 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %35 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @httpError(i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str.1, i64 0, i64 0), %struct.TYPE_7__* %30, i32 %33, i32 %36)
  %38 = load i32, i32* @HTTP_CHECK_BODY_ERROR, align 4
  store i32 %38, i32* %3, align 4
  br label %41

39:                                               ; preds = %17
  %40 = load i32, i32* @HTTP_CHECK_BODY_CONTINUE, align 4
  store i32 %40, i32* %3, align 4
  br label %41

41:                                               ; preds = %39, %29, %12
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}

declare dso_local i32 @httpParseChunkedBody(%struct.TYPE_7__*, i32*, i32) #1

declare dso_local i32 @httpTrace(i8*, %struct.TYPE_7__*, i32, i32) #1

declare dso_local i32 @httpReadDataImp(%struct.TYPE_7__*) #1

declare dso_local i32 @httpError(i8*, %struct.TYPE_7__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
